--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="blue_professional">#1E88E5</color>
+    <color name="red_professional">#E53935</color>
+    <color name="gray_text">#555555</color>
+    <color name="white">#FFFFFF</color>
 </resources>
