--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -4,16 +4,19 @@
     <item
         android:id="@+id/nav_depenses"
         android:icon="@android:drawable/ic_menu_view"
-        android:title="Dépenses"/>
+        android:title="@string/nav_depenses"
+        />
 
     <item
         android:id="@+id/nav_stats"
         android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:title="Stats"/>
+        android:title="@string/nav_stats"
+        />
 
     <item
         android:id="@+id/nav_categories"
         android:icon="@android:drawable/ic_menu_manage"
-        android:title="Catégories"/>
+        android:title="@string/nav_categories"
+        />
 
 </menu>
