--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="blue_professional">#1E88E5</color>
-    <color name="red_professional">#E53935</color>
-    <color name="gray_text">#555555</color>
+    <!-- Couleurs principales -->
+    <color name="colorPrimary">#4CAF50</color>
+    <color name="colorPrimaryDark">#388E3C</color>
+    <color name="colorAccent">#FFC107</color>
+
+    <!-- Couleurs UI -->
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
+    <color name="blue_professional">#2196F3</color> <!-- bleu -->
+    <color name="red_professional">#F44336</color> <!-- rouge -->
+    <color name="gray">#808080</color>
+    <color name="light_gray">#E0E0E0</color>
+
+    <!-- Pour catégories -->
+    <color name="category_default_bg">#EEEEEE</color>
+    <color name="category_custom_bg">#FFFFFF</color>
 </resources>
