--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,9 +9,10 @@
 
     <item
         android:id="@+id/nav_stats"
-        android:icon="@android:drawable/ic_menu_sort_by_size"
-        android:title="@string/nav_stats"
-        />
+        android:title="Stats"
+        android:icon="@drawable/ic_stats"/>
+
+
 
     <item
         android:id="@+id/nav_categories"
