--- a/app/src/main/res/drawable/button_blue_rounded.xml
+++ b/app/src/main/res/drawable/button_blue_rounded.xml
@@ -1,5 +1,5 @@
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/blue_professional"/>
-    <corners android:radius="16dp"/>
+<?xml version="1.0" encoding="utf-8"?>
+<shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <solid android:color="#2196F3"/>
+    <corners android:radius="8dp"/>
 </shape>
